Change path of supervisord.conf

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -71,7 +71,7 @@ COPY --chmod=755 scripts/dbusUp.sh /usr/local/bin/dbusUp
 COPY --chmod=755 scripts/dbus-socket.sh /usr/local/bin/dbus-socket
 COPY --chmod=755 scripts/vswitch-init.sh /usr/local/bin/vswitch-init
 COPY --chmod=755 scripts/ssh-keystore.sh /usr/local/bin/ssh-keystore
-COPY --chmod=640 supervisord.conf /etc/supervisord.conf
+COPY --chmod=640 supervisord.conf /etc/conf.d/supervisord.conf
 
 RUN adduser -D -s /bin/bash virtual; \
 	usermod -aG libvirt virtual; \
@@ -81,4 +81,4 @@ VOLUME ["/etc/libvirt/storage", "/etc/libvirt/qemu", "/etc/libvirt/qemu/networks
 
 EXPOSE 22
 
-ENTRYPOINT ["sh", "-c", ". /opt/supervisor/bin/activate; supervisord -c /etc/supervisord.conf"]
+ENTRYPOINT ["sh", "-c", ". /opt/supervisor/bin/activate; supervisord -c /etc/conf.d/supervisord.conf"]
