--- a/.woodpecker/build-image.yaml
+++ b/.woodpecker/build-image.yaml
@@ -11,10 +11,15 @@ when:
   event: [push, pull_request, manual]
 
 variables:
-  - &file src/Dockerfile
+  - &file Dockerfile
   - &repo https://git.chimmie.k.vu/GamePlayer-8/docker-libvirtd
 
 steps:
+  prepare:
+    image: alpine:3.22
+    commands:
+      - cp src/* . -r
+
   dryrun:
     image: woodpeckerci/plugin-docker-buildx
     settings:
