Add multi-arch support.

--- a/.woodpecker/build-image.yaml
+++ b/.woodpecker/build-image.yaml
@@ -36,7 +36,7 @@ steps:
       ipv6: true
       context: *context
       dockerfile: *file
-      platforms: linux/amd64,linux/arm64
+      platforms: linux/amd64,linux/arm/v7,linux/arm64,linux/riscv64
       repo: forgejo.xvm/gameplayer-8/${CI_REPO_NAME}
       registry: forgejo.xvm
       tags: latest
